--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "handlebars": "^4.7.7",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "not": "^0.1.0",
     "notiflix": "^3.2.5"
   }
 }
