--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,11 @@
 {
   "hosting": {
-    "public": "dist/app",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "dist",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "*.html"
       }
     ]
   }
